8079792 breaks Zero builds without precompiled headers

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • gc
    • b72

        This was detected by the Zero no precompiled headers builder here:
        http://builder.classpath.org/jenkins/job/OpenJDK9_hs_rt_Zero_no_pch/9/console

        The relevant compile error is:

        In file included from /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero_no_pch/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/g1/g1BiasedArray.cpp:26:0:
        /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero_no_pch/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/g1/g1BiasedArray.hpp:148:23: error: ‘MemRegion’ has not been declared
        /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero_no_pch/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/g1/g1BiasedArray.hpp: In member function ‘void G1BiasedMappedArray<T>::set_by_address(int, T)’:
        /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero_no_pch/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/g1/g1BiasedArray.hpp:149:44: error: request for member ‘start’ in ‘range’, which is of non-class type ‘int’
        /var/lib/jenkins/jobs/OpenJDK9_hs_rt_Zero_no_pch/workspace/openjdk9/hs-rt/hotspot/src/share/vm/gc/g1/g1BiasedArray.hpp:150:43: error: request for member ‘last’ in ‘range’, which is of non-class type ‘int’
        make[8]: *** [g1BiasedArray.o] Error 1
        make[8]: *** Waiting for unfinished jobs....

        It seems the patch for JDK-8079792 introduced this.

              Assignee:
              Severin Gehwolf
              Reporter:
              Severin Gehwolf
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: